# lantara-v2

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  PORTFOLIO_CONTEXT.md  PRD.md  README.md  SSO_INTEGRATION_GUIDE.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/apps/accounts/: admin.py  models.py  oidc.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_direktorat_verifierpermitassignment.py  0003_user_jabatan.py  0004_otpcode_attempts.py  0005_verifierpermitassignment_stage_key.py
backend/apps/analytics/: urls.py  views.py
backend/apps/antrean/: admin.py  apps.py  consumers.py  email.py  models.py  pdf.py  permissions.py  routing.py  serializers.py  signals.py  tasks.py  test_services.py  urls.py  views.py
backend/apps/antrean/migrations/: 0001_initial.py  0002_remove_ticket_antrean_tic_submiss_1becd3_idx_and_more.py  0003_instansi_logo_instansi_owner_type.py  0004_ticket_holder_email_ticket_pdf_file.py  0005_alter_counterstaffassignment_role_scope.py  0006_rename_mpp_roles_and_scopes.py  0007_instansi_break_end_instansi_break_start_and_more.py
backend/apps/antrean/services/: checkin.py  errors.py  estimate.py  lifecycle.py  numbering.py  ordering.py  params.py  quota.py  realtime.py  triage.py  working_hours.py
backend/apps/common/: exceptions.py  middleware.py  models.py  pagination.py  permissions.py
backend/apps/documents/: models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
backend/apps/documents/migrations/: 0001_initial.py
backend/apps/engine/: admin.py  apps.py  models.py  readiness.py  serializers.py  signals.py  test_builder_review.py  tests.py  urls.py  views.py
backend/apps/notifications/: consumers.py  middleware.py  models.py  routing.py  urls.py  utils.py  views.py
backend/apps/permits/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/rdtr/: apps.py  models.py  urls.py  views.py
backend/apps/reference/: admin.py  apps.py  models.py  urls.py
backend/apps/submissions/: apps.py  field_validation.py  models.py  serializers.py  services.py  sla.py  tasks.py  tests.py  urls.py  views.py
backend/apps/tte/: adapter.py  apps.py  models.py  urls.py  views.py
backend/apps/whatsapp/: adapter.py  apps.py  models.py  services.py
backend/config/: __init__.py  api_urls.py  asgi.py  celery.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
(+213 files in other folders)
