[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lantara-backend"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    # Core
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "django-filter>=24.2",
    "django-environ>=0.11",
    # Database
    "psycopg[binary]>=3.1",
    # Auth
    "djangorestframework-simplejwt>=5.3",
    "mozilla-django-oidc>=4.0.0",
    "pyotp>=2.9",
    # Async / Celery
    "celery[redis]>=5.3",
    "django-celery-beat>=2.6",
    "channels[daphne]>=4.1",
    "channels-redis>=4.2",
    # Storage
    "django-storages[s3]>=1.14",
    "boto3>=1.34",
    # PDF
    "weasyprint>=62",
    "terbilang>=0.0.4",
    # Utils
    "Pillow>=10.3",
    "openpyxl>=3.1",
    "qrcode[pil]>=7.4",
    "python-magic>=0.4",
    "bleach>=6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "djangorestframework-stubs>=3.15",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",     # line too long — black handles this
    "RUF012",   # Django model class attributes follow Django convention, not Python dataclass
    "RUF001",   # Special Unicode in docstrings/strings (› used intentionally in PRD text)
    "RUF003",   # Unicode in comments
    "B904",     # raise-without-from — acceptable in DRF views
    "SIM105",   # contextlib.suppress — try/except/pass is clearer in these cases
    "RUF005",   # list concat — acceptable for INSTALLED_APPS pattern
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501", "N806", "I001"]
"config/settings/*.py" = ["F401", "F403", "E402"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=apps --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = false
ignore_missing_imports = true

[mypy.plugins.django-stubs]
django_settings_module = "config.settings.base"
